<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_view_find_job"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_margin="10dp"
    android:background="@color/item_background"
    android:elevation="8dp"
    android:padding="5dp">

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:src="@drawable/img_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding"
        android:fontFamily="@font/roboto"
        android:text="@string/example_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/example_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_image"
        app:layout_constraintTop_toBottomOf="@+id/item_title" />

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginBottom="2dp"
        android:src="@drawable/ic_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_image" />

    <TextView
        android:id="@+id/item_view"
        style="@style/item_text_view"
        android:text="@string/example_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_icon" />

    <TextView
        android:id="@+id/item_date"
        style="@style/item_text_view"
        android:text="@string/example_date"
        android:layout_marginEnd="@dimen/padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/item_time"/>

    <TextView
        android:id="@+id/item_time"
        style="@style/item_text_view"
        android:layout_marginStart="@dimen/padding"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/example_time"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>