<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".StartActivity">

    <ImageView
        android:id="@+id/activity_start_logo_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon"
        android:layout_marginTop="85dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_kaz_activity_start"
        android:text="@string/welcome_kaz"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_start_logo_end"
        style="@style/title_text_activity_start" />

    <TextView
        android:id="@+id/welcome_ru_activity_start"
        style="@style/title_text_activity_start"
        android:text="@string/welcome_ru"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/welcome_kaz_activity_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_select_lang_activity_start"
        style="@style/text_view_activity_start"
        android:text="Пожалуйста выберите язык"
        app:layout_constraintTop_toBottomOf="@+id/welcome_ru_activity_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="75dp" />

    <Button
        android:id="@+id/btn_kaz_activity_start"
        android:text="@string/kaz"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_ru_activity_start"
        app:layout_constraintTop_toBottomOf="@id/text_select_lang_activity_start"
        style="@style/btn_style_activity_start" />

    <Button
        android:id="@+id/btn_ru_activity_start"
        android:text="@string/ru"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_kaz_activity_start"
        app:layout_constraintTop_toBottomOf="@id/text_select_lang_activity_start"
        style="@style/btn_style_activity_start" />






</androidx.constraintlayout.widget.ConstraintLayout>